@@ -964,15 +964,27 @@ CLEANFILES = bfd.h dep.sed stmp-bfd-h DEP DEPA DEP1 DEP2 libbfd.a stamp-lib \
 DISTCLEANFILES = $(BUILD_CFILES) $(BUILD_HFILES)
 
 bfdver.h: $(srcdir)/version.h $(srcdir)/Makefile.in
-	@echo "creating $@"
+	@-test -d doc || mkdir doc
+	@echo "creating $@ and doc/bfdver.texi"
 	@bfd_version=`echo "$(VERSION)" | sed -e 's/\([^\.]*\)\.*\([^\.]*\)\.*\([^\.]*\)\.*\([^\.]*\)\.*\([^\.]*\).*/\1.00\2.00\3.00\4.00\5/' -e 's/\([^\.]*\)\..*\(..\)\..*\(..\)\..*\(..\)\..*\(..\)$$/\1\2\3\4\5/'` ;\
 	bfd_version_string="\"$(VERSION)\"" ;\
 	bfd_version_package="\"$(PKGVERSION)\"" ;\
+	report_bugs_to="\"$(REPORT_BUGS_TO)\"" ;\
 	if test "x$(RELEASE)" = x ; then \
 	  bfd_version_date=`sed -n -e 's/.*DATE //p' < $(srcdir)/version.h` ;\
 	  bfd_version_string="\"$(VERSION).$${bfd_version_date}\"" ;\
 	fi ;\
-	sed -e "s/@bfd_version@/$$bfd_version/" -e "s/@bfd_version_string@/$$bfd_version_string/" -e "s/@bfd_version_package@/$$bfd_version_package/" < $(srcdir)/version.h > $@
+	sed -e "s,@bfd_version@,$$bfd_version," \
+	    -e "s,@bfd_version_string@,$$bfd_version_string," \
+	    -e "s,@bfd_version_package@,$$bfd_version_package," \
+	    -e "s,@report_bugs_to@,$$report_bugs_to," \
+	    < $(srcdir)/version.h > $@; \
+	 echo "@set VERSION $(VERSION)" > doc/bfdver.texi; \
+	 echo "@set VERSION_PACKAGE $(PKGVERSION)" >> doc/bfdver.texi; \
+	 echo "@set UPDATED `date '+%B %Y'`" >> doc/bfdver.texi; \
+	 if [ -n "$(REPORT_BUGS_TEXI)" ]; then \
+	   echo "@set BUGURL $(REPORT_BUGS_TEXI)" >> doc/bfdver.texi; \
+	 fi
 
 # What appears below is generated by a hacked mkdep using gcc -MM.
 
